--- a/conf.d/db.yaml
+++ b/conf.d/db.yaml
@@ -1,5 +1,6 @@
 ---
-DBSERVER: "127.0.0.1"
+#DBSERVER: "l-dnstools1.ops.bj2.daling.com"
+DBSERVER: "l-dnstools1.ops.bj2.daling.com"
 PORT: 5494
 DBUSER: "dnsadmin"
 DBPASS: "dnsadmin"
